--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "eslint": "^4.12.0",
     "express": "^4.16.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^5.0.0",
     "moment": "^2.19.2",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "prettier": "^1.8.2",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
@@ -16,10 +19,17 @@
     "serve-static": "^1.13.1"
   },
   "scripts": {
+    "precommit": "lint-staged",
     "apiserver": "node index.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   }
 }
